// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`create_root instruction Works for community side 1`] = `
[
  TransactionInstruction {
    "data": {
      "data": [
        115,
        195,
        96,
        208,
        249,
        205,
        56,
        27,
      ],
      "type": "Buffer",
    },
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(DbRShWg7R1efdVuUirTrXC5Vrd2gGtRv7xEXN4QD9ZWw) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              65709544,
              26812604,
              7709336,
              29776890,
              7016367,
              8618985,
              6692552,
              30979342,
              15033484,
              3065704,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(BvQys4bSSzv8HnTUse17x6sm67qbQ5u7xj2BiCkQZc4d) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              58079054,
              36569257,
              7101222,
              54828669,
              59166928,
              57562788,
              29347375,
              18485335,
              5338649,
              2658545,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(ETSoAX2JebkucZHW5Vg8JRBRoqptp8vTUMjw3G9fKYSg) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              57943581,
              44141542,
              15457336,
              36665374,
              19136760,
              45881863,
              28275435,
              62208564,
              47814291,
              3275660,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(7dz49JkGFr9ywHJJyT7xJkWFJv1HSw6a1oKQMRsjTuci) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              46896215,
              20183853,
              55025,
              7492377,
              34198466,
              59422852,
              6103045,
              34166487,
              46457569,
              1615842,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": PublicKey(ALkNx6FUt5DeTXEgmsMtpF6HjBu5v9YA5tHHU1oFB8Mx) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              15574891,
              29149812,
              45742115,
              51727471,
              45423278,
              56388931,
              42793431,
              16305363,
              1070484,
              2273809,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(2mMWiiQRJPDL7mxQ6LZdAHjQE98r2xzijhK2xS5gZeb8) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              48732575,
              66294772,
              66789304,
              47444353,
              10876799,
              54202352,
              27897559,
              38007796,
              60539122,
              429595,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(GovErnqK4XvMPN1Njxh1zTQpzzzPZUaJQGjHM9qHjMHr) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              37302321,
              26661558,
              32514984,
              48073858,
              4758616,
              64087088,
              63568600,
              23015560,
              66347731,
              3848461,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              8873870,
              60943108,
              23935113,
              33099803,
              59555925,
              65803128,
              11262563,
              66819466,
              50754419,
              120882,
              0,
            ],
          },
        },
      },
    ],
    "programId": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
      "_bn": BN {
        "length": 10,
        "negative": 0,
        "red": null,
        "words": [
          8873870,
          60943108,
          23935113,
          33099803,
          59555925,
          65803128,
          11262563,
          66819466,
          50754419,
          120882,
          0,
        ],
      },
    },
  },
  TransactionInstruction {
    "data": {
      "data": [
        22,
        0,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        50,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        0,
      ],
      "type": "Buffer",
    },
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(BvQys4bSSzv8HnTUse17x6sm67qbQ5u7xj2BiCkQZc4d) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              58079054,
              36569257,
              7101222,
              54828669,
              59166928,
              57562788,
              29347375,
              18485335,
              5338649,
              2658545,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": PublicKey(ALkNx6FUt5DeTXEgmsMtpF6HjBu5v9YA5tHHU1oFB8Mx) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              15574891,
              29149812,
              45742115,
              51727471,
              45423278,
              56388931,
              42793431,
              16305363,
              1070484,
              2273809,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(ETSoAX2JebkucZHW5Vg8JRBRoqptp8vTUMjw3G9fKYSg) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              57943581,
              44141542,
              15457336,
              36665374,
              19136760,
              45881863,
              28275435,
              62208564,
              47814291,
              3275660,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              8873870,
              60943108,
              23935113,
              33099803,
              59555925,
              65803128,
              11262563,
              66819466,
              50754419,
              120882,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
    ],
    "programId": PublicKey(GovErnqK4XvMPN1Njxh1zTQpzzzPZUaJQGjHM9qHjMHr) PublicKey {
      "_bn": BN {
        "length": 10,
        "negative": 0,
        "red": null,
        "words": [
          37302321,
          26661558,
          32514984,
          48073858,
          4758616,
          64087088,
          63568600,
          23015560,
          66347731,
          3848461,
          0,
        ],
      },
    },
  },
]
`;

exports[`create_root instruction Works for community side 2`] = `
[
  TransactionInstruction {
    "data": {
      "data": [
        115,
        195,
        96,
        208,
        249,
        205,
        56,
        27,
      ],
      "type": "Buffer",
    },
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(3q1wwWraLNJr86AtDpLvdCv92Xkh47xkruRoDfQheouu) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              55803292,
              56136151,
              19481043,
              12805818,
              28154535,
              58946337,
              50111483,
              57816922,
              48257306,
              688404,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(HaP8jMNA5tyyZo4WUybWzw2JDm26ks1tM8hzdtFgQ9j4) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              44467759,
              6361579,
              6086648,
              66384142,
              49392678,
              14448973,
              56399817,
              31816424,
              50786497,
              4035083,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(7xi6tNMR7mjVUoT96BAC5RRgGGtsV7ot5PtE5ogCu1yS) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              7513209,
              46732664,
              66142550,
              34809689,
              23867398,
              39921380,
              4029952,
              58455163,
              36057456,
              1694434,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(FFoZHtEnVAcqWRrWSJuSwaNhDD233ji8AUsUGdTMqf7n) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              14828897,
              50565887,
              22693448,
              34006707,
              86845,
              61200733,
              65407039,
              12837600,
              65167986,
              3470232,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": PublicKey(FRBUNsdJmHmuZ3STCHENKNozW1mUot5kQmvcNg4yaMDd) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              57774708,
              8462039,
              25856231,
              4215079,
              14676022,
              35787589,
              5053974,
              5237723,
              27967471,
              3509593,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(814jMngcEVVi5A7qrEVHnaazB4CjZNRmi1oWNYEa9AwK) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              7965506,
              61576607,
              23922490,
              14302249,
              59930614,
              49824062,
              37212117,
              42312133,
              46139823,
              1704321,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(govrnqX1Kx5j1Y3Y3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              24804138,
              14041733,
              10942277,
              21608356,
              29741479,
              66927727,
              65079254,
              24170420,
              46211060,
              167085,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              8873870,
              60943108,
              23935113,
              33099803,
              59555925,
              65803128,
              11262563,
              66819466,
              50754419,
              120882,
              0,
            ],
          },
        },
      },
    ],
    "programId": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
      "_bn": BN {
        "length": 10,
        "negative": 0,
        "red": null,
        "words": [
          8873870,
          60943108,
          23935113,
          33099803,
          59555925,
          65803128,
          11262563,
          66819466,
          50754419,
          120882,
          0,
        ],
      },
    },
  },
  TransactionInstruction {
    "data": {
      "data": [
        22,
        0,
        2,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        20,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        0,
        0,
        0,
        0,
      ],
      "type": "Buffer",
    },
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(HaP8jMNA5tyyZo4WUybWzw2JDm26ks1tM8hzdtFgQ9j4) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              44467759,
              6361579,
              6086648,
              66384142,
              49392678,
              14448973,
              56399817,
              31816424,
              50786497,
              4035083,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": PublicKey(FRBUNsdJmHmuZ3STCHENKNozW1mUot5kQmvcNg4yaMDd) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              57774708,
              8462039,
              25856231,
              4215079,
              14676022,
              35787589,
              5053974,
              5237723,
              27967471,
              3509593,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(7xi6tNMR7mjVUoT96BAC5RRgGGtsV7ot5PtE5ogCu1yS) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              7513209,
              46732664,
              66142550,
              34809689,
              23867398,
              39921380,
              4029952,
              58455163,
              36057456,
              1694434,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              8873870,
              60943108,
              23935113,
              33099803,
              59555925,
              65803128,
              11262563,
              66819466,
              50754419,
              120882,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(CAtStpbXBSmrd3oBwS7ePgMZJ7KK79UVpmM87aGnzpgc) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              16955885,
              19082314,
              11331137,
              50735069,
              36093876,
              20899558,
              12463349,
              64913396,
              4383083,
              2719293,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
    ],
    "programId": PublicKey(govrnqX1Kx5j1Y3Y3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3) PublicKey {
      "_bn": BN {
        "length": 10,
        "negative": 0,
        "red": null,
        "words": [
          24804138,
          14041733,
          10942277,
          21608356,
          29741479,
          66927727,
          65079254,
          24170420,
          46211060,
          167085,
          0,
        ],
      },
    },
  },
]
`;

exports[`create_root instruction Works for community side 3`] = `
[
  TransactionInstruction {
    "data": {
      "data": [
        115,
        195,
        96,
        208,
        249,
        205,
        56,
        27,
      ],
      "type": "Buffer",
    },
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(BWKBz7ea7kSzE6au78sXJnST824wKDPJ9avQZDmoUkWZ) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              52229718,
              58679936,
              19252305,
              51564991,
              30805799,
              4207613,
              32124183,
              40482247,
              59754928,
              2557393,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(BgdaaVW8xi3stnmSQxDgbUSrKETHehgKdZnDLf25nqoc) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              35968823,
              62692685,
              42784362,
              11707079,
              65751252,
              21423752,
              9869718,
              13196438,
              24634549,
              2600696,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(Azrzh6gfwi2ixMmDH4Xqo7NBwpgUfcxZdm7Kw1iMxt81) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              9277242,
              28959418,
              32057797,
              34745044,
              27390759,
              26194363,
              29720350,
              14681089,
              21979440,
              2433780,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(2XjVUAVYD6fUnUBoJqLNbQjufdQft4PtxcQwLMkuQrpM) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              44299734,
              38343229,
              23051204,
              49114011,
              32774323,
              49856921,
              6895135,
              13511076,
              64906106,
              372425,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": PublicKey(GDSEdbzQWVC61j4YhVQZ5pkhQSJ9eg1Gtarj3f3xkga2) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              31176927,
              27447869,
              806694,
              17423363,
              22215601,
              33293735,
              58053801,
              16380447,
              43189841,
              3703731,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(F321jXco2GbpLaAsxR727TLbXQ3LQRr7AB9DVN5b5Hy5) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              22613876,
              36479733,
              21469425,
              40901424,
              60537160,
              21305597,
              12162771,
              26813750,
              7344858,
              3416571,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(GrR56FFSgyyMMJtNVsS33nvoM8zXGdHs69QfvZhALv8C) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              35863069,
              49982478,
              8038179,
              61447638,
              8656205,
              20826582,
              24775445,
              6791654,
              49045110,
              3858942,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              8873870,
              60943108,
              23935113,
              33099803,
              59555925,
              65803128,
              11262563,
              66819466,
              50754419,
              120882,
              0,
            ],
          },
        },
      },
    ],
    "programId": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
      "_bn": BN {
        "length": 10,
        "negative": 0,
        "red": null,
        "words": [
          8873870,
          60943108,
          23935113,
          33099803,
          59555925,
          65803128,
          11262563,
          66819466,
          50754419,
          120882,
          0,
        ],
      },
    },
  },
  TransactionInstruction {
    "data": {
      "data": [
        22,
        1,
        100,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        50,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        0,
      ],
      "type": "Buffer",
    },
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(BgdaaVW8xi3stnmSQxDgbUSrKETHehgKdZnDLf25nqoc) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              35968823,
              62692685,
              42784362,
              11707079,
              65751252,
              21423752,
              9869718,
              13196438,
              24634549,
              2600696,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": PublicKey(GDSEdbzQWVC61j4YhVQZ5pkhQSJ9eg1Gtarj3f3xkga2) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              31176927,
              27447869,
              806694,
              17423363,
              22215601,
              33293735,
              58053801,
              16380447,
              43189841,
              3703731,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(25fzgPBoXMgds3XmZLq1ECVF4HNoBd7RAh9nBoScEdpp) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              33254205,
              32833114,
              9241971,
              60905829,
              10848249,
              10477893,
              53837508,
              22720196,
              32622652,
              263046,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(2cQL9ecbT5hRw7eVNa7wzmv1C76yebmARSYcivGACD3i) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              61370037,
              23360809,
              37982338,
              26402356,
              13207690,
              34204939,
              59306126,
              57278815,
              17659703,
              392025,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(Azrzh6gfwi2ixMmDH4Xqo7NBwpgUfcxZdm7Kw1iMxt81) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              9277242,
              28959418,
              32057797,
              34745044,
              27390759,
              26194363,
              29720350,
              14681089,
              21979440,
              2433780,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              8873870,
              60943108,
              23935113,
              33099803,
              59555925,
              65803128,
              11262563,
              66819466,
              50754419,
              120882,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
    ],
    "programId": PublicKey(GrR56FFSgyyMMJtNVsS33nvoM8zXGdHs69QfvZhALv8C) PublicKey {
      "_bn": BN {
        "length": 10,
        "negative": 0,
        "red": null,
        "words": [
          35863069,
          49982478,
          8038179,
          61447638,
          8656205,
          20826582,
          24775445,
          6791654,
          49045110,
          3858942,
          0,
        ],
      },
    },
  },
]
`;

exports[`create_root instruction Works for community side 4`] = `
[
  TransactionInstruction {
    "data": {
      "data": [
        115,
        195,
        96,
        208,
        249,
        205,
        56,
        27,
      ],
      "type": "Buffer",
    },
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(6Ac4UEJ6AubDFfkK4HsiydsSuvWDgjnGp92C4JiweL1k) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              30781535,
              53542205,
              44016677,
              19035252,
              55040269,
              47127283,
              61761530,
              37841997,
              31359807,
              1257491,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(9a5LFeRuT5mSvFw5pNQFCaXLJb4HE83JBxY9s2BnAiiZ) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              3412198,
              39489918,
              33372618,
              21280913,
              13471501,
              33757489,
              58322942,
              21229611,
              57446009,
              2086307,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(HKcHwT4Vf6qHc5xBNSWcNwJ7iQNMYbUWbGSgv4qDwz98) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              66103883,
              58564744,
              58104881,
              16718627,
              23599981,
              32065805,
              63871906,
              65544858,
              27834944,
              3973078,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(B4wVHPFEBvhsMxsrEYX2cVbTfcfQiLZMh7XbofeDofhd) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              33514268,
              38576428,
              28820499,
              60174870,
              15120390,
              46231706,
              61127514,
              28593253,
              9874701,
              2450894,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": PublicKey(JDt2fQ5TSEn5LBEueZwmpnTUeG3aCebtHDz75paZSw8k) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              51167393,
              17488651,
              46887655,
              57329362,
              45625970,
              12372949,
              26239502,
              2086456,
              8555017,
              4192470,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(UoQaWMMFZNnQ9o4qNpBsvFXFQN9HmawwLQL3B5Erd2Y) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              22590433,
              57758287,
              47027577,
              35713186,
              44691490,
              52986808,
              33042947,
              16771752,
              56823795,
              116681,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(C33AVZsSSswAx6gqi3KXT7bxpXPPi5n1KSFZoan7Zh2m) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              33071046,
              4457739,
              39800208,
              38504790,
              2436520,
              6627580,
              2798464,
              17517814,
              34450164,
              2686346,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              8873870,
              60943108,
              23935113,
              33099803,
              59555925,
              65803128,
              11262563,
              66819466,
              50754419,
              120882,
              0,
            ],
          },
        },
      },
    ],
    "programId": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
      "_bn": BN {
        "length": 10,
        "negative": 0,
        "red": null,
        "words": [
          8873870,
          60943108,
          23935113,
          33099803,
          59555925,
          65803128,
          11262563,
          66819466,
          50754419,
          120882,
          0,
        ],
      },
    },
  },
  TransactionInstruction {
    "data": {
      "data": [
        22,
        1,
        3,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        90,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        0,
        1,
        1,
        0,
      ],
      "type": "Buffer",
    },
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(9a5LFeRuT5mSvFw5pNQFCaXLJb4HE83JBxY9s2BnAiiZ) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              3412198,
              39489918,
              33372618,
              21280913,
              13471501,
              33757489,
              58322942,
              21229611,
              57446009,
              2086307,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": PublicKey(JDt2fQ5TSEn5LBEueZwmpnTUeG3aCebtHDz75paZSw8k) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              51167393,
              17488651,
              46887655,
              57329362,
              45625970,
              12372949,
              26239502,
              2086456,
              8555017,
              4192470,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(EpdNSa67fpomhxXSKaL5fwaCPQGYbWVPf7k6NvpJZnCd) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              5726246,
              30941938,
              55437424,
              61562626,
              52094472,
              23968365,
              28287650,
              9205732,
              32797589,
              3364566,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(GYZp21Xcp7QsxzFCaBLjmaE6UNV239QvZPEPniCvhDJ6) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              26067647,
              2592511,
              31809026,
              36166292,
              50528115,
              52820729,
              16385857,
              56389297,
              7906859,
              3784026,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(HKcHwT4Vf6qHc5xBNSWcNwJ7iQNMYbUWbGSgv4qDwz98) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              66103883,
              58564744,
              58104881,
              16718627,
              23599981,
              32065805,
              63871906,
              65544858,
              27834944,
              3973078,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              8873870,
              60943108,
              23935113,
              33099803,
              59555925,
              65803128,
              11262563,
              66819466,
              50754419,
              120882,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(3cWyirr8k5NK1ZX8A4ZUpsg1TpHnf2HXvJyBH6BWodHF) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              29765694,
              21564382,
              61417283,
              55300473,
              34010396,
              55715124,
              804974,
              52882299,
              19793081,
              635942,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(AiurCiekwEz3i8gVapCdRWs9fb4ry45RHCD691AUp5sd) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              6278576,
              3558105,
              44363026,
              31848854,
              35589267,
              60929090,
              26008988,
              50705981,
              5518913,
              2366832,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(AEjwvocgFfu2hpGZpY2qGaEzoCQrGYnf7TGSviEZB9Fn) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              67055849,
              9483813,
              65988286,
              60282799,
              36542326,
              26360063,
              51109538,
              46952379,
              51389409,
              2248594,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
    ],
    "programId": PublicKey(C33AVZsSSswAx6gqi3KXT7bxpXPPi5n1KSFZoan7Zh2m) PublicKey {
      "_bn": BN {
        "length": 10,
        "negative": 0,
        "red": null,
        "words": [
          33071046,
          4457739,
          39800208,
          38504790,
          2436520,
          6627580,
          2798464,
          17517814,
          34450164,
          2686346,
          0,
        ],
      },
    },
  },
]
`;

exports[`create_root instruction Works for council side 1`] = `
[
  TransactionInstruction {
    "data": {
      "data": [
        115,
        195,
        96,
        208,
        249,
        205,
        56,
        27,
      ],
      "type": "Buffer",
    },
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(3tnAvuNA5jtTR2x4fDEYwhXrtWjt6o7QB53iENRpFXYU) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              63431993,
              66198071,
              62212981,
              33065833,
              66871501,
              102386,
              54624131,
              39460126,
              33713390,
              704196,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(BgdaaVW8xi3stnmSQxDgbUSrKETHehgKdZnDLf25nqoc) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              35968823,
              62692685,
              42784362,
              11707079,
              65751252,
              21423752,
              9869718,
              13196438,
              24634549,
              2600696,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(Azrzh6gfwi2ixMmDH4Xqo7NBwpgUfcxZdm7Kw1iMxt81) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              9277242,
              28959418,
              32057797,
              34745044,
              27390759,
              26194363,
              29720350,
              14681089,
              21979440,
              2433780,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(25fzgPBoXMgds3XmZLq1ECVF4HNoBd7RAh9nBoScEdpp) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              33254205,
              32833114,
              9241971,
              60905829,
              10848249,
              10477893,
              53837508,
              22720196,
              32622652,
              263046,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": PublicKey(GDSEdbzQWVC61j4YhVQZ5pkhQSJ9eg1Gtarj3f3xkga2) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              31176927,
              27447869,
              806694,
              17423363,
              22215601,
              33293735,
              58053801,
              16380447,
              43189841,
              3703731,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(8a92yCQZ8EsgGWJ73GMi9qoMtHEWu46CLcNprzZUAhQB) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              32472760,
              17418843,
              24459405,
              47067252,
              25745650,
              65539338,
              44436145,
              27196859,
              52920108,
              1843139,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(GrR56FFSgyyMMJtNVsS33nvoM8zXGdHs69QfvZhALv8C) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              35863069,
              49982478,
              8038179,
              61447638,
              8656205,
              20826582,
              24775445,
              6791654,
              49045110,
              3858942,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              8873870,
              60943108,
              23935113,
              33099803,
              59555925,
              65803128,
              11262563,
              66819466,
              50754419,
              120882,
              0,
            ],
          },
        },
      },
    ],
    "programId": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
      "_bn": BN {
        "length": 10,
        "negative": 0,
        "red": null,
        "words": [
          8873870,
          60943108,
          23935113,
          33099803,
          59555925,
          65803128,
          11262563,
          66819466,
          50754419,
          120882,
          0,
        ],
      },
    },
  },
  TransactionInstruction {
    "data": {
      "data": [
        22,
        1,
        100,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        50,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
      ],
      "type": "Buffer",
    },
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(BgdaaVW8xi3stnmSQxDgbUSrKETHehgKdZnDLf25nqoc) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              35968823,
              62692685,
              42784362,
              11707079,
              65751252,
              21423752,
              9869718,
              13196438,
              24634549,
              2600696,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": PublicKey(GDSEdbzQWVC61j4YhVQZ5pkhQSJ9eg1Gtarj3f3xkga2) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              31176927,
              27447869,
              806694,
              17423363,
              22215601,
              33293735,
              58053801,
              16380447,
              43189841,
              3703731,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(25fzgPBoXMgds3XmZLq1ECVF4HNoBd7RAh9nBoScEdpp) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              33254205,
              32833114,
              9241971,
              60905829,
              10848249,
              10477893,
              53837508,
              22720196,
              32622652,
              263046,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(2cQL9ecbT5hRw7eVNa7wzmv1C76yebmARSYcivGACD3i) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              61370037,
              23360809,
              37982338,
              26402356,
              13207690,
              34204939,
              59306126,
              57278815,
              17659703,
              392025,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(Azrzh6gfwi2ixMmDH4Xqo7NBwpgUfcxZdm7Kw1iMxt81) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              9277242,
              28959418,
              32057797,
              34745044,
              27390759,
              26194363,
              29720350,
              14681089,
              21979440,
              2433780,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              8873870,
              60943108,
              23935113,
              33099803,
              59555925,
              65803128,
              11262563,
              66819466,
              50754419,
              120882,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
    ],
    "programId": PublicKey(GrR56FFSgyyMMJtNVsS33nvoM8zXGdHs69QfvZhALv8C) PublicKey {
      "_bn": BN {
        "length": 10,
        "negative": 0,
        "red": null,
        "words": [
          35863069,
          49982478,
          8038179,
          61447638,
          8656205,
          20826582,
          24775445,
          6791654,
          49045110,
          3858942,
          0,
        ],
      },
    },
  },
]
`;

exports[`create_root instruction Works for council side 2`] = `
[
  TransactionInstruction {
    "data": {
      "data": [
        115,
        195,
        96,
        208,
        249,
        205,
        56,
        27,
      ],
      "type": "Buffer",
    },
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(DoZw88VQZEe8wM6b9K21LUmTYXTGYx818Awwsu5CaBBF) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              59656978,
              47545152,
              30101854,
              28101624,
              473294,
              5446842,
              35947694,
              13042060,
              44965360,
              3116684,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(9a5LFeRuT5mSvFw5pNQFCaXLJb4HE83JBxY9s2BnAiiZ) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              3412198,
              39489918,
              33372618,
              21280913,
              13471501,
              33757489,
              58322942,
              21229611,
              57446009,
              2086307,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(HKcHwT4Vf6qHc5xBNSWcNwJ7iQNMYbUWbGSgv4qDwz98) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              66103883,
              58564744,
              58104881,
              16718627,
              23599981,
              32065805,
              63871906,
              65544858,
              27834944,
              3973078,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(EpdNSa67fpomhxXSKaL5fwaCPQGYbWVPf7k6NvpJZnCd) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              5726246,
              30941938,
              55437424,
              61562626,
              52094472,
              23968365,
              28287650,
              9205732,
              32797589,
              3364566,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": PublicKey(JDt2fQ5TSEn5LBEueZwmpnTUeG3aCebtHDz75paZSw8k) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              51167393,
              17488651,
              46887655,
              57329362,
              45625970,
              12372949,
              26239502,
              2086456,
              8555017,
              4192470,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(6QjqQDfXuMcEZxxBvReoAgt5ojyFeisshuqN7Fecvba4) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              15914333,
              14155376,
              52959748,
              35493213,
              30644856,
              65951116,
              29152739,
              57386912,
              32644836,
              1316814,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(C33AVZsSSswAx6gqi3KXT7bxpXPPi5n1KSFZoan7Zh2m) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              33071046,
              4457739,
              39800208,
              38504790,
              2436520,
              6627580,
              2798464,
              17517814,
              34450164,
              2686346,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              8873870,
              60943108,
              23935113,
              33099803,
              59555925,
              65803128,
              11262563,
              66819466,
              50754419,
              120882,
              0,
            ],
          },
        },
      },
    ],
    "programId": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
      "_bn": BN {
        "length": 10,
        "negative": 0,
        "red": null,
        "words": [
          8873870,
          60943108,
          23935113,
          33099803,
          59555925,
          65803128,
          11262563,
          66819466,
          50754419,
          120882,
          0,
        ],
      },
    },
  },
  TransactionInstruction {
    "data": {
      "data": [
        22,
        1,
        3,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        90,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        0,
        1,
        1,
        0,
      ],
      "type": "Buffer",
    },
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(9a5LFeRuT5mSvFw5pNQFCaXLJb4HE83JBxY9s2BnAiiZ) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              3412198,
              39489918,
              33372618,
              21280913,
              13471501,
              33757489,
              58322942,
              21229611,
              57446009,
              2086307,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": PublicKey(JDt2fQ5TSEn5LBEueZwmpnTUeG3aCebtHDz75paZSw8k) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              51167393,
              17488651,
              46887655,
              57329362,
              45625970,
              12372949,
              26239502,
              2086456,
              8555017,
              4192470,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(EpdNSa67fpomhxXSKaL5fwaCPQGYbWVPf7k6NvpJZnCd) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              5726246,
              30941938,
              55437424,
              61562626,
              52094472,
              23968365,
              28287650,
              9205732,
              32797589,
              3364566,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(GYZp21Xcp7QsxzFCaBLjmaE6UNV239QvZPEPniCvhDJ6) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              26067647,
              2592511,
              31809026,
              36166292,
              50528115,
              52820729,
              16385857,
              56389297,
              7906859,
              3784026,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": PublicKey(HKcHwT4Vf6qHc5xBNSWcNwJ7iQNMYbUWbGSgv4qDwz98) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              66103883,
              58564744,
              58104881,
              16718627,
              23599981,
              32065805,
              63871906,
              65544858,
              27834944,
              3973078,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(Cgkum2oTs87Vhtu87Y8UznPB5tvNSdBweEGQsxYhzeLN) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              45712415,
              60399628,
              2976120,
              37274815,
              5237713,
              34622005,
              13694300,
              28254569,
              54901438,
              2844662,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(3cWyirr8k5NK1ZX8A4ZUpsg1TpHnf2HXvJyBH6BWodHF) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              29765694,
              21564382,
              61417283,
              55300473,
              34010396,
              55715124,
              804974,
              52882299,
              19793081,
              635942,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              8873870,
              60943108,
              23935113,
              33099803,
              59555925,
              65803128,
              11262563,
              66819466,
              50754419,
              120882,
              0,
            ],
          },
        },
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": PublicKey(AEjwvocgFfu2hpGZpY2qGaEzoCQrGYnf7TGSviEZB9Fn) PublicKey {
          "_bn": BN {
            "length": 10,
            "negative": 0,
            "red": null,
            "words": [
              67055849,
              9483813,
              65988286,
              60282799,
              36542326,
              26360063,
              51109538,
              46952379,
              51389409,
              2248594,
              0,
            ],
          },
        },
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": PublicKey(11111111111111111111111111111111) PublicKey {
          "_bn": BN {
            "length": 1,
            "negative": 0,
            "red": null,
            "words": [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
          },
        },
      },
    ],
    "programId": PublicKey(C33AVZsSSswAx6gqi3KXT7bxpXPPi5n1KSFZoan7Zh2m) PublicKey {
      "_bn": BN {
        "length": 10,
        "negative": 0,
        "red": null,
        "words": [
          33071046,
          4457739,
          39800208,
          38504790,
          2436520,
          6627580,
          2798464,
          17517814,
          34450164,
          2686346,
          0,
        ],
      },
    },
  },
]
`;
